--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>My Times</title>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+<!-- Header -->
+<div class="header">
+  <p>
+    <img src="./resources/images/img-myt-logo.jpg"></img>
+  </p>
 
   </body>
 </html>
